correction collapse et slide

--- a/src/style/apropos.css
+++ b/src/style/apropos.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   gap: 20px;
+  padding-bottom: 25px;
 }
 .apropos .collapse-container {
   width: 100%;
