--- a/src/style/collapse.scss
+++ b/src/style/collapse.scss
@@ -49,7 +49,7 @@
     padding-bottom: 142px;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
-    max-height: 0;
+    max-height: 166px;
     overflow: hidden;
     transition: all 0.3s ease-out;
 
@@ -62,15 +62,15 @@
 
   @media screen and (max-width: 768px) {
     width: 100%;
-
-    .button {
-      height: 30px;
-
-      .collapse-label {
-        font-size: 15px;
-
+    .collapse {
+      .button {
+        height: 30px;
         .content {
           padding-bottom: 35px;
+          max-height: 100px;
+          .collapse-label {
+            font-size: 15px;
+          }
         }
       }
     }
