--- a/src/style/slide.scss
+++ b/src/style/slide.scss
@@ -42,6 +42,7 @@
     position: absolute;
     z-index: 1;
     width: 100%;
+    height: 415px;
 
     img {
       width: 100%;
